[metadata]
name = nettest
version = 0.3.7
description = Comprehensive network test suite for connectivity, performance, and security testing

[options]
python_requires = >=3.9
packages = find:
install_requires =
    click>=8.1
    requests>=2.31
    dnspython>=2.4
    ntplib>=0.4
    rich>=13.0
    pyyaml>=6.0
    pytest>=7.4
    scapy>=2.5
    sacn>=1.9

[options.packages.find]
include = nettest*

[options.entry_points]
console_scripts =
    nettest = nettest.cli:main

[options.extras_require]
ndi = ndi-python>=5.0
all-av = ndi-python>=5.0
